fix: faq-area inner gap

--- a/css/style.css
+++ b/css/style.css
@@ -11927,6 +11927,9 @@ ul.children {
     width: unset !important;
   }
 }
+.faq-area.style-2 .faq-inner-wrapper .elementor-column:last-child .accordion-wrapper {
+  margin-top: 70px;
+}
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .faq-area.style-2 .faq-inner-wrapper .elementor-container .elementor-widget-wrap {
     padding-right: 0;
@@ -11934,6 +11937,7 @@ ul.children {
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .faq-area.style-2 .faq-inner-wrapper .elementor-container .elementor-widget-wrap {
+    padding-left: 0;
     padding-right: 30px;
   }
 }
