--- a/sass/pages/_faq.scss
+++ b/sass/pages/_faq.scss
@@ -18,6 +18,11 @@
                 @media only screen and (min-width: 0px) and (max-width: 768px){
                     width: unset !important;
                 }
+                &:last-child{
+                    .accordion-wrapper{
+                        margin-top: 70px;
+                    }
+                }
             }
             .elementor-container {
                 .elementor-widget-wrap{
@@ -25,6 +30,7 @@
                         padding-right: 0;
                     }
                     @include md{
+                        padding-left: 0;
                         padding-right: 30px;
                     }
                 }
